salesforce/force-app/main/default/objects/Supplier_Risk_Change__e/Supplier_Risk_Change__e.object-meta.xml
<CustomObject>
    <description>Published when a supplier&apos;s own compliance status changes (Account.Risk_Tier__c changes, driven by a Compliance_Assessment__c/document status change). Subscribed by SupplierRiskChangeTrigger, which drives MultiTierRollupService in real time (not a batch job) so the cascading risk SCORE and worst-case tier recompute bottom-up from the changed supplier to Tier 1.</description>
    <label>Supplier Risk Change</label>
    <pluralLabel>Supplier Risk Changes</pluralLabel>
</CustomObject>