salesforce/force-app/main/default/objects/Supplier_Risk_Change__e/fields/New_Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>New_Risk_Tier__c</fullName>
    <description>Account.Risk_Tier__c value after the change that triggered this event.</description>
    <label>New Risk Tier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>