salesforce/force-app/main/default/objects/Supplier_Risk_Change__e/fields/Old_Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Old_Risk_Tier__c</fullName>
    <description>Account.Risk_Tier__c value before the change that triggered this event (may be blank on first evaluation).</description>
    <label>Old Risk Tier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>