salesforce/force-app/main/default/objects/Supplier_Risk_Change__e/fields/Supplier_Id__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Id__c</fullName>
    <description>Salesforce Id of the Account whose Risk_Tier__c changed. MultiTierRollupService starts its bottom-up walk from this Id.</description>
    <label>Supplier Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>